fix heading spacing and nav Z

--- a/_sass/minima/_layout.sass
+++ b/_sass/minima/_layout.sass
@@ -36,6 +36,7 @@ body > header // site-wide header
     top: 0
     max-width: 100vw
     width: 100vw
+    z-index: 1
 
     a
       line-height: $base-line-height
@@ -216,8 +217,10 @@ main > section
     width: 50%
     text-align: center
     transform: rotate(-1.62deg)
+    padding: 4rem 0
     +media-query-progressive($tablet-up)
       width: 25%
+      
 
 .page-heading
   @include relative-font-size(2)
